# computacion_visual

./: README.md
examen/: PC3.cpp
proyecto/: conjunto_mandelbrot.cpp  copo_nieve_koch.cpp  curva_koch.cpp  dragon.cpp  linea.cpp  tilinadas.cpp  triangulo_sierpinski.cpp
semana1/: CMakeLists.txt  decagonos.cpp  lineas_dentadas.cpp  lineas_engranaje.cpp
semana10/: PC2.cpp  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  main.cpp  ppt.cpp
semana11/: ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  main.cpp  pruebas.cpp
semana2/: CMakeLists.txt  caracol.cpp  caracol_pascal.cpp  cardioide.cpp  circulo.cpp  cisoide_diocles.cpp  concoides_nicomenes.cpp  espiral.cpp  gludisk.cpp  hiperbole.cpp  lemniscata.cpp  nefroide_freeth.cpp  parabola.cpp  rosa2.cpp  rosal.cpp  yinyan.cpp
semana3/: CMakeLists.txt  ejercicio2a.cpp  ejercicio3a.cpp  ejercicio4a.cpp  ejercicio5a.cpp  main.cpp
semana4/: .gitignore  CMakeLists.txt  ejercicio1.cpp  main.cpp  polares.cpp  polares.h
semana5/: CMakeLists.txt  cuboRotaConTeclado.cpp  ejemplo.cpp  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  figures.cpp  figures.h  jaja.cpp  primitive_quadri.cpp  pruebas_elipsticas.cpp
semana9/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  figures.cpp  figures.h  listas.cpp  main.cpp  prueba.cpp
